--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx src/index.ts"
+    "dev": "tsx src/index.ts",
+    "start:remote": "node dist/remote-server.js",
+    "dev:remote": "tsx src/remote-server.ts",
+    "proxy": "node dist/client-proxy.js",
+    "dev:proxy": "tsx src/client-proxy.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +19,11 @@
     "@modelcontextprotocol/sdk": "^1.13.0",
     "@types/node": "^24.0.3",
     "@types/ssh2": "^1.15.5",
+    "@types/ws": "^8.18.1",
     "ssh2": "^1.16.0",
     "ssh2-sftp-client": "^12.0.0",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "ws": "^8.18.2"
   }
 }
