--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts",
-    "start:remote": "node dist/remote-server.js",
-    "dev:remote": "tsx src/remote-server.ts",
-    "proxy": "node dist/client-proxy.js",
-    "dev:proxy": "tsx src/client-proxy.ts"
+    "start:mcp": "node dist/mcp-http-server.js",
+    "dev:mcp": "tsx src/mcp-http-server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
     "@types/ssh2": "^1.15.5",
     "@types/ws": "^8.18.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "ssh2": "^1.16.0",
     "ssh2-sftp-client": "^12.0.0",
     "tsx": "^4.20.3",
